--- a/templates/calendar/day.html
+++ b/templates/calendar/day.html
@@ -17,22 +17,12 @@
                             <input type="submit" name="previous" value="previous" />
                             <input type="submit" name="next" value="next" />
                             <input type="submit" name="today" value="today" />
-                            <a href="{% url "calendar_event_create" %}">create new event</a>
                         </form> 
                     </div>
                     <div class="week-day">
-                        <div class="week-headers"><a href="{% url "calendar_day" year=day|date:'Y' month=day|date:'m' day=day|date:'d' %}">{{ day|date:'D m/d' }}</a></div>
+                        {% load fart_tags %}
                         {% for occurrence in occurrences %}
-                        <div class="week-event">
-                            <a href="{{ occurrence.get_absolute_url }}">
-                                <div class="week-event-title">{{ occurrence }} » {{ occurrence.event.localevent.location.name }}</div>
-                                <div class="week-event-time">{{ occurrence.start|date:"P" }}</div>
-                            </a>
-                        </div>
-                        {% empty %}
-                        <div class="week-event">
-                            <div class="week-event-title">nothing today folks</div>
-                        </div>
+                            {% item_list list=occurrences parent=day number=occurrences|length %}
                         {% endfor %}
                     </div>
                 </div>
