--- a/templates/feeds/feed_list.html
+++ b/templates/feeds/feed_list.html
@@ -1,21 +1,18 @@
 {% extends 'feeds/base.html' %}
 
+
+{% block header %}
+
+{% endblock %}
+
 {% block center_content %}
-            <div class="section-header">all {{ item_type }}s</div>
-                <ul id="item-list">
-                {% for item in object_list %}
-                    <li>
-                        <a href="{{ item.get_absolute_url }}">
-                        <h3>{{ item.title }}</h3>
-                        <div class="check-border">
-                            <img src="{{ item.image.get_blog_header_url }}">
-                            <div class="hover-shadow">
-                                {{ item.description|safe }}
-                            </div>
-                        </div>
-                    </li>
-                {% endfor %}
-                </ul>
-    
+        {% load fart_tags %}
+        {% load endless %}
+        {% lazy_paginate object_list %}
+        {% for feed in object_list %}
+            {% item_list list=feed.post_set.all parent=feed number=4 %}
+        {% endfor %}
+        {% show_more %}
+
 {% endblock %}
 
